# cv19api

./: Cargo.toml  README.md
examples/: coviddata_countries.rs  cv19api_deaths.rs  cv19api_deaths_by_region.rs  cv19api_deaths_by_trust.rs  get_deaths.rs  get_deaths_by_region.rs  get_deaths_by_trust.rs
resources/: deaths-regions.json  deaths-trusts.json  deaths.json
src/: api.rs  data.rs  lib.rs  utils.rs
src/coviddata/: api.rs  data.rs
src/cv19api/: api.rs
